SERVER-40647 ViewCatalog::iterate should use _reloadIfNeeded rather than _requireValidCatalog